--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     window.$docsify = {
       name: '',
       repo: '',
-      loadSidebar: true,
+      loadSidebar: 'summary.md',
       loadNavbar: true,
       search: {
         placeholder: '搜索',
