--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     window.$docsify = {
       name: '',
       repo: '',
-      loadSidebar: 'summary.md',
+      loadSidebar: true,
       loadNavbar: true,
       search: {
         placeholder: '搜索',
@@ -39,11 +39,11 @@
   <!-- Docsify v4 -->
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
   <!-- serach插件 -->
-  <!-- <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script> -->
-  <!-- <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script> -->
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
   <!-- 代码块copy插件 -->>
-  <!-- <script src="https://unpkg.com/docsify-copy-code@2"></script> -->
+  <script src="https://unpkg.com/docsify-copy-code@2"></script>
   <!-- 翻页插件 -->
-  <!-- <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script> -->
+  <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
 </body>
 </html>
